[package]
name = "jwtox"
version = "1.1.0"
edition = "2021"

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
base64 = "0.22.1"
chrono = "0.4.38"
clap = { version = "4.4.11", features = ["derive"] }
colored = "2.1.0"
ring = "0.17.8"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
sha2 = "0.10.8"
thiserror = "1.0.60"

[build-dependencies]
clap = { version = "4.4.11", features = ["derive"] }
clap_complete = "4.5.2"

[dev-dependencies]
assert_cmd = "2.0.14"
jsonwebtoken = "9.3.0"
predicates = "3.1.0"
pretty_assertions = "1.4.0"
rand = "0.8.5"
rsa = { version = "0.9.6", features = ["pem", "std"] }

