[package]
name = "jwtox"
version = "1.5.0"
edition = "2024"

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.101"
base64 = "0.22.1"
chrono = "0.4.43"
chrono-humanize = "0.2.3"
clap = { version = "4.5.57", features = ["derive"] }
colored = "3.1.1"
dirs = "6.0.0"
hmac = "0.12.1"
md5 = "0.8.0"
p256 = { version = "0.13", features = ["ecdsa"] }
p384 = { version = "0.13", features = ["ecdsa"] }
p521 = { version = "0.13", features = ["ecdsa"] }
reqwest = { version = "0.13.1", features = ["json"] }
rsa = "0.9.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = { version = "0.10", features = ["oid"] }
sha256 = "1.6.0"
thiserror = "2.0.18"
tokio = { version = "1", features = ["full"] }
url = "2.5.8"

[build-dependencies]
clap = { version = "4.5.57", features = ["derive"] }
clap_complete = "4.5.65"

[dev-dependencies]
assert_cmd = "2.1.2"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
predicates = "3.1.3"
pretty_assertions = "1.4.1"
rand = "0.9.2"
rsa = { version = "0.9.10", features = ["pem", "std"] }
httpmock = "0.8.3"
assert_fs = "1.1.3"
